# ssh-acme

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: build_nix.yml  docker_build.yml  docker_e2e_test.yml  fuzzing.yml  release.yml
cert_authority_fuzz/: Cargo.toml
cert_authority_fuzz/in_empty/: seed
cert_authority_fuzz/src/: main.rs
clients/: ssh-ca-sign-host-key.sh  ssh-ca-sign-user-key.sh
config/: config.toml  host_cert_template.toml  test_user_template.toml  user.toml  user_default.toml
config/hosts/: testhost.toml
docker/: .dockerignore  Dockerfile  Dockerfile.client  Dockerfile.testhost  docker-compose.yml  run_e2e_test.sh
docker/docker_default_config/: config.toml  user.toml  user_default.toml
docker/test_config/: config.toml  test_user_template.toml  user.toml  user_default.toml
documentation/: overview.md  setup-ca.md  setup-host.md  setup-user.md  setup.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ca_new_invalid_key.rs  fuzz_cert_signing.rs  fuzz_config_parsing.rs  fuzz_exec_request_parser.rs  fuzz_host_cert_signing.rs  fuzz_hostname_validation.rs  fuzz_ipc_messages.rs  fuzz_ssh_protocol.rs  fuzz_user_key_parsing.rs
fuzz_ideas/: ca_mod.md
nix/: checks.nix  debian-client.nix  debian-server.nix  devshell.nix  nixos-module.nix  packages.nix
scripts/: fuzz-all.sh  fuzz-coverage.sh  run-fuzzing.sh
src/: certificat_authority.rs  certificat_template_reader.rs  lib.rs  main.rs  pam_auth.rs
src/certificat_authority/: ca_client.rs  ca_server.rs  certificat_template_reader.rs  config.rs  host_ca.rs  host_config_reader.rs  host_defaults_reader.rs  mod.rs  user_defaults_reader.rs
src/config/: mod.rs
src/identiy_handlers/: mod.rs  pam_auth.rs
src/ssh_server/: config.rs  host_key_signer.rs  mod.rs  user_key_signer.rs
test_data/: test_key  test_key.pub  user_cert_config.toml
tests/: integration_test.rs  test_host_key_signig.rs  test_ssh_server.rs
tests/common/: client_handler.rs  mod.rs
tests/end_to_end_test/: ssh_ca.service  start_service.py  test.nix  test_utils.py
tests/end_to_end_test/config/: config.toml  host_cert_template.toml  user.toml  user_default.toml
tests/nixos_test/: ssh_acme.service  test.nix  test_utils.py
tests/nixos_test/config/: config.toml  test_user_template.toml
tests/nixos_test/config/hosts/: testhost.toml.j2
