[package]
name = "ssh_ca_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
duration-str = "0.17.0"
env_logger = "0.11.8"
log = "0.4.27"
minijinja = "2.10.2"
nix = {version="0.30.1", features= ["process", "user", "socket"]}
pam = "0.8"
rand = "0.9.1"
#russh = {version="0.52.1", features=["async-trait"]}
russh = {git = "https://github.com/gvz/russh.git", features=["async-trait"]}
russh-keys = "0.49.2"
serde = {version="1.0.219", features=["derive"]}
serde_json = {version="1.0.140"}
ssh-key = {version="0.6.7", features=["ed25519", "serde"]}
thiserror = "2.0.12"
tokio = {version="1.45.1",features=["full"]}
toml = "0.8.23"
humantime = "2.1.0"
async-trait = "0.1.88"
tempfile = "3.10.1"
arbitrary = { version = "1.4.2", optional = true, features = ["derive"] }
ed25519-dalek = { version = "2.1.1", optional = true, features = ["serde"] }
glob = "0.3.3"
zeroize = "1.8.2"


[features]
test_auth =[]
arbitrary = ["dep:arbitrary", "dep:ed25519-dalek"]
default = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dev-dependencies]


