[package]
name = "cert_authority_fuzz"
version = "0.1.0"
edition = "2024"

[dependencies]
afl = "0.15.20"
once_cell = "1.21.3"
ssh-key = {version="0.6.7", features=["ed25519", "serde"]}
tempfile = "3.20.0"
tokio = {version="1.45.1",features=["full"]}
arbitrary = {version="1.4.2", features = ["derive"]}

[dependencies.ssh_acme_server]
path = ".."
features = ["arbitrary"]
