[package]
name = "ssh_ca_server-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"
ssh-key = { version = "0.6.7", features = ["ed25519"] }
tempfile = "3.10"
minijinja = "2.10"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dependencies.ssh_ca_server]
path = ".."
features = ["arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_ipc_messages"
path = "fuzz_targets/fuzz_ipc_messages.rs"
doc = false

[[bin]]
name = "fuzz_cert_signing"
path = "fuzz_targets/fuzz_cert_signing.rs"
doc = false

[[bin]]
name = "fuzz_config_parsing"
path = "fuzz_targets/fuzz_config_parsing.rs"
doc = false

[[bin]]
name = "fuzz_ssh_protocol"
path = "fuzz_targets/fuzz_ssh_protocol.rs"
doc = false
