[package]
name = "ssh_ca_server-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"
ssh-key = { version = "0.6.7", features = ["ed25519"] }
tempfile = "3.10"
subtle = "2.6"

[dependencies.ssh_ca_server]
path = ".."
features = ["arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_ipc_messages"
path = "fuzz_targets/fuzz_ipc_messages.rs"
doc = false

[[bin]]
name = "fuzz_cert_signing"
path = "fuzz_targets/fuzz_cert_signing.rs"
doc = false

[[bin]]
name = "fuzz_ssh_protocol"
path = "fuzz_targets/fuzz_ssh_protocol.rs"
doc = false

[[bin]]
name = "fuzz_exec_request_parser"
path = "fuzz_targets/fuzz_exec_request_parser.rs"
doc = false

[[bin]]
name = "fuzz_hostname_validation"
path = "fuzz_targets/fuzz_hostname_validation.rs"
doc = false

[[bin]]
name = "fuzz_user_key_parsing"
path = "fuzz_targets/fuzz_user_key_parsing.rs"
doc = false
